<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GKSa</string>
    <string name="hello_world">Hello world!</string>

    <!-- Menu buttons -->
    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_connect">Connect</string>
    <string name="action_forums">Forums</string>
    <string name="action_mailbox">Private messages</string>
    <string name="action_twits">Twits</string>
    <string name="action_search_torrents">Search torrents</string>
    <string name="action_browse_torrents">Browse torrents</string>

    <!-- Activity titles -->
    <string name="title_activity_mailbox">Private messages</string>
    <string name="title_activity_conversation_empty">Private message</string>
    <string name="title_activity_conversation">PM : %s</string>
    <string name="title_activity_twits">Twits</string>
    <string name="title_activity_forums">Forums</string>
    <string name="title_activity_forum_empty">Forum</string>
    <string name="title_activity_forum">Forum : %s</string>
    <string name="title_activity_topic_empty">Topic</string>
    <string name="title_activity_topic">Topic : %s</string>
    <string name="title_activity_creds">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search_torrents">Search torrents</string>
    <string name="title_activity_browse_torrents">Browse torrents</string>
    <string name="title_activity_torrent_info">Torrent info</string>

    <!-- Toasts -->
    <string name="toast_connected">Connected !</string>
    <string name="toast_badLogin">Wrong credentials</string>
    <string name="toast_serverError">Server error : %s</string>
    <string name="toast_internalError">Internal error : %s</string>
    <string name="toast_bookmarked">Bookmarked %s</string>
    <string name="toast_autogeted">Autoget %s</string>

    <!-- Progress -->
    <string name="progress_connecting">Connecting</string>
    <string name="progress_loading">Loading</string>

    <!-- Input fields -->
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>

    <!-- Buttons -->
    <string name="txt_connect">Connect</string>
    <string name="txt_save">Save</string>
    <string name="txt_torrent_dl">Get .torrent</string>
    <string name="txt_torrent_bookmark">Bookmark it</string>
    <string name="txt_torrent_autoget">Autoget it</string>
    <string name="txt_go">Go</string>

    <!-- Txt -->
    <string name="txt_status">Status</string>
    <string name="txt_userId">User ID</string>
    <string name="txt_pseudo">Nickname</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_download">Download</string>
    <string name="txt_ratio">Ratio</string>
    <string name="txt_reqRatio">Required ratio</string>
    <string name="txt_class">Class</string>
    <string name="txt_karma">Karma</string>
    <string name="txt_aura">Aura</string>
    <string name="txt_unreadMP">Unread PM</string>
    <string name="txt_MP">PM</string>
    <string name="txt_unreadTwits">Unread Twits</string>
    <string name="txt_hitAndRun">Hit\'n\'Run</string>
    <string name="txt_noFreeleech">No freeleech</string>
    <string name="txt_authKey">AuthKey</string>
    <string name="txt_twits">Twits</string>
    <string name="txt_seeding">Seeding</string>
    <string name="txt_leeching">Leeching</string>
    <string name="txt_title">Title</string>
    <string name="txt_infinity">∞</string>
    <string name="txt_pageSlashPage_empty">Page 0/0</string>
    <string name="txt_anonymous">Anonymous</string>
    <!-- Formatted text -->
    <string name="txt_format_ntopics">%s topics</string>
    <string name="txt_format_freeleech">FL %1$s : %2$s</string>
    <string name="txt_format_reqRatio">%1$s required</string>
    <string name="txt_format_hitAndRun">%1$s hit\'n\'run</string>
    <string name="txt_format_karma">%1$s karma</string>
    <string name="txt_format_aura">%1$s aura</string>
    <string name="txt_format_pageSlashPage">Page %1$s/%2$s</string>
    <string name="txt_format_topiclastmsg">%1$s - %2$s</string>
    <string name="txt_format_MP">%1$s PM</string>
    <string name="txt_format_twits">%1$s twits</string>
    <string name="txt_format_seeds">%1$s seeding</string>
    <string name="txt_format_leechs">%1$s leeching</string>

    <!-- Spinner -->
    <string-array name="spn_cat">
        <item>All</item>
        <item>Windows</item>
        <item>Mac</item>
        <item>DVDRip</item>
        <item>DVDRip VOSTFR</item>
        <item>Emissions</item>
        <item>Docs</item>
        <item>Docs HD</item>
        <item>TV Pack</item>
        <item>TV VOSTFR</item>
        <item>TV</item>
        <item>TV HD VOSTFR</item>
        <item>TV HD</item>
        <item>720p</item>
        <item>1080p</item>
        <item>BluRay</item>
        <item>Others</item>
        <item>DVDR</item>
        <item>DVDR Series</item>
        <item>Anime</item>
        <item>TV VO</item>
        <item>Concerts</item>
        <item>eBooks</item>
        <item>Sport</item>
        <item>PC Games</item>
        <item>DS</item>
        <item>Wii</item>
        <item>Xbox 360</item>
        <item>PSP</item>
        <item>PS3</item>
        <item>Flac</item>
    </string-array>
    <string-array name="spn_sort_browse">
        <item>Date</item>
        <item>Name</item>
        <item>Comments</item>
        <item>Size</item>
        <item>Completed</item>
        <item>Seeders</item>
        <item>Leechers</item>
        <item>Freeleech</item>
        <item>2x UP</item>
        <item>Nuked</item>
    </string-array>
    <string-array name="spn_sort_search">
        <item>Pertinence</item>
        <item>Date</item>
        <item>Comments</item>
        <item>Size</item>
        <item>Completed</item>
        <item>Seeders</item>
        <item>Leechers</item>
    </string-array>
    <string-array name="spn_order">
        <item>Desc</item>
        <item>Asc</item>
    </string-array>

    <!-- Images description -->
    <string name="imgdesc_read">Read status</string>
    <string name="imgdesc_starred">Starred</string>
    <string name="imgdesc_first">First</string>
    <string name="imgdesc_previous">Previous</string>
    <string name="imgdesc_next">Next</string>
    <string name="imgdesc_last">Last</string>
    <string name="imgdesc_new">New</string>
    <string name="imgdesc_fl">FL</string>
    <string name="imgdesc_nuked">Nuked</string>
    <string name="imgdesc_scene">Scene</string>
    <string name="imgdesc_cat">Category</string>
    <string name="imgdesc_upload">Upload</string>
    <string name="imgdesc_download">Download</string>
    <string name="imgdesc_ratio">Ratio</string>

    <!-- Empty -->
    <string name="txt_empty_s">AZ</string>
    <string name="txt_empty_m">Lorem ipsum</string>
    <string name="txt_empty_l">Excepteur sint occaecat cupidatat</string>
    <string name="txt_empty_xl">Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</string>

    <!-- Debug -->
    <string name="txt_debug">Debug</string>
    <string name="txt_empty">(no idea)</string>
    <string name="txt_splash_placeholder">Placeholder splash screen</string>

</resources>
