<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topic_img_first"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/imgdesc_first"
            android:clickable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topic_img_prev"
            android:src="@android:drawable/ic_media_rew"
            android:contentDescription="@string/imgdesc_previous"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pageSlashPage_empty"
            android:id="@+id/topic_txt_pages"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topic_img_next"
            android:src="@android:drawable/ic_media_ff"
            android:contentDescription="@string/imgdesc_next"
            android:clickable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topic_img_last"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/imgdesc_last"
            android:clickable="true"
            android:focusable="false" />
    </LinearLayout>

    <ScrollView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:id="@+id/topic_scrollView">

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:id="@+id/topic_table"
                android:padding="6dp"
                >

        </TableLayout>
    </ScrollView>
</LinearLayout>