<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:background="#eee">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:measureWithLargestChild="false"
            >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="4dp"
                android:layout_marginBottom="2dp">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welc_img_user"
                    android:src="@drawable/ic_launcher"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:minHeight="80dp"
                    android:minWidth="80dp"
                    android:contentDescription="@string/txt_pseudo"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/txt_pseudo"
                        android:id="@+id/welc_txt_pseudo"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_twits"
                        android:id="@+id/welc_txt_twits"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_class"
                        android:id="@+id/welc_txt_class"/>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/welc_img_mp"
                            android:src="@android:drawable/ic_dialog_email"
                            android:adjustViewBounds="true"
                            android:baselineAlignBottom="false"
                            android:maxWidth="16dp"
                            android:contentDescription="@string/txt_MP"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_MP"
                            android:id="@+id/welc_txt_mp"
                            />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="4dp"
                android:baselineAligned="false"
                android:layout_margin="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                >

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_upload"
                        android:id="@+id/welc_txt_upload"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ratio"
                        android:id="@+id/welc_txt_ratio"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_hitAndRun"
                        android:id="@+id/welc_txt_hitAndRun"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_karma"
                        android:id="@+id/welc_txt_karma"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_download"
                        android:id="@+id/welc_txt_download"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_reqRatio"
                        android:id="@+id/welc_txt_reqRatio"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@android:string/unknownName"
                        android:id="@+id/welc_txt_meh"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_aura"
                        android:id="@+id/welc_txt_aura"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="4dp"
                android:baselineAligned="false"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                >

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_seeding"
                        android:id="@+id/welc_txt_seeding"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_leeching"
                        android:id="@+id/welc_txt_leeching"
                        />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="4dp"
                android:baselineAligned="false"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_debug"
                        android:id="@+id/welc_txt_debug"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_debug"
                        android:id="@+id/welc_txt_authKey"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_userId"
                        android:id="@+id/welc_txt_userId"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_debug"
                        android:id="@+id/welc_txt_debug2"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>