<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:id="@+id/_creds_txt_Username"
            android:layout_gravity="left|center_vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/creds_etxt_Username"
            android:layout_gravity="left|center_vertical"
            android:layout_below="@+id/_creds_txt_Username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:inputType="text"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_connect"
            android:id="@+id/creds_btn_Connect"
            android:layout_gravity="center"
            android:layout_below="@+id/creds_etxt_Password"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:id="@+id/_creds_txt_Password"
            android:layout_below="@+id/creds_etxt_Username"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/creds_etxt_Password"
            android:layout_below="@+id/_creds_txt_Password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>
</RelativeLayout>