<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_margin="2dp"
    android:layout_height="wrap_content"
    android:background="@drawable/clickable_row_border"
    android:id="@+id/torrentmin_row"
    android:clickable="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/torrentmin_img_new"
                android:src="@drawable/torrent_new"
                android:padding="1dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/torrentmin_img_nuke"
                android:src="@drawable/torrent_nuke"
                android:padding="1dp"
                android:layout_gravity="center_vertical"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/torrentmin_img_fl"
                android:src="@drawable/torrent_freeleech"
                android:padding="1dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/torrentmin_img_scene"
                android:src="@drawable/torrent_scene"
                android:padding="1dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_empty_l"
                android:id="@+id/torrentmin_txt_name"
                android:textStyle="bold"
                android:paddingLeft="2dp"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="14">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/torrentmin_img_cat"
                android:layout_weight="3"
                android:src="@drawable/cat_dvdrip"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="false" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_empty_m"
                android:id="@+id/torrentmin_txt_size"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_empty_s"
                android:id="@+id/torrentmin_txt_comm"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_empty_s"
                android:id="@+id/torrentmin_txt_comp"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:textColor="@color/torrent_completed"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_empty_s"
                android:id="@+id/torrentmin_txt_seed"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:textColor="@color/torrent_seeders"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_empty_s"
                android:id="@+id/torrentmin_txt_leech"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:textColor="@color/torrent_leechers"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</TableRow>